[package]
name = "srrpr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
srrp = { path = "../../" }
cio= { git = "https://github.com/yonzkon/cio" }
log = "0.4"
simple_logger = "4.1"
ctrlc = "3.2"
clap = { version = "4.2.1", features = ["derive"] }
